# train-yolo-model

./: README.md  data.yaml  detector.py  main.py  pyproject.toml  requirements.txt
data/: classes.txt  notes.json
data/labels/: 006494d3-cup7.txt  0162f669-car8.txt  0d7e33de-bottle7.txt  1d1489fb-car11.txt  1f5ad43f-car1.txt  405d8575-bottle1.txt  4d7a3fb8-cup1.txt  6336ee5d-car3.txt  68d6ffcc-car6.txt  767ee118-cup15.txt  85469f83-bottle2.txt  89d48538-bottle13.txt  8d242366-cup12.txt  9fa6469d-car4.txt  a1eb7a28-cup4.txt  a52ec62b-cup11.txt  a5c4adfc-bottle3.txt  ca5a5aa5-bottle14.txt  d0c758c8-car2.txt  d7233f37-bottle6.txt  f1be179e-bottle15.txt  f2ac9bee-car10.txt  f919160a-car15.txt
data/train/: labels.cache
data/train/labels/: 07816bcb-bottle4.txt  1ef84c19-car14.txt  308d1bac-bottle11.txt  324674a0-cup3.txt  3b6d283c-cup13.txt  3e9f340a-bottle10.txt  44efaa31-car5.txt  507b15fa-bottle5.txt  9a3f05e9-car7.txt  9fd9cc2b-bottle12.txt  aaf46e15-cup6.txt  b053915e-cup14.txt  b86ac8dc-cup5.txt  dd39d95c-cup9.txt  e80f5be6-cup10.txt  ef2eef0c-bottle8.txt  f2f7a27f-cup2.txt  f520bcf2-car13.txt  fa2f5fe9-cup8.txt
data/validation/: labels.cache
data/validation/labels/: 09e4ea26-car12.txt  5a26b2b4-car9.txt  6f941e56-bottle9.txt
notebooks/: train_val_split.ipynb  train_yolo.ipynb
runs/detect/train/: args.yaml  results.csv
