[project]
name = "train-yolo-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.14.1",
    "pyyaml>=6.0.3",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "ultralytics>=8.4.62",
]
